fix: button hover effect bug on mobile

--- a/style.css
+++ b/style.css
@@ -62,10 +62,12 @@ header, .score-message-box {
   border-radius: 15px;
 }
 
-.btn:hover {
-  background-color: #353d4a;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  transform: translateY(-2px);
+@media (hover: hover) {
+  .btn:hover {
+    background-color: #353d4a;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transform: translateY(-2px);
+  }
 }
 
 .btn:active {
